<resources>
    <string name="app_name">TEMPO</string>
    <string name="title_name">Utility App</string>
    <string name="desc_radio">Radio</string>
    <string name="desc_weather">Weather</string>
    <string name="desc_news">News</string>
    <string name="desc_time">Time</string>
    <string name="desc_support">Extra</string>
    <string name="author">Frank Berrocal</string>
    <string name="year">2023</string>
    <string name="weather_city">City</string>
    <string name="weather_country">Country Code</string>
    <string name="weather_title">Weather</string>
    <string name="weather_button">Get Weather</string>
    <string name="news_title">News</string>
    <string name="news_button">Get News</string>
    <string name="news_search">Search News</string>
    <string name="news_language">Language</string>
    <string name="news_hint">Subject</string>
    <string name="news_api_key">c42f015ee92247a29f33afa7e116944e</string>
    <string name="time_zone">Time Zone</string>
    <string name="time_title">Time</string>
    <string name="time_button">Get Time</string>
    <string name="flag_title">Flagsmart!</string>
    <string-array name="timezones_array">
        <item>Pacific/Tahiti</item>
        <item>America/Los_Angeles</item>
        <item>America/Vancouver</item>
        <item>America/Whitehorse</item>
        <item>America/Edmonton</item>
        <item>America/Hermosillo</item>
        <item>America/Phoenix</item>
        <item>America/Belize</item>
        <item>America/Chicago</item>
        <item>America/Costa_Rica</item>
        <item>America/El_Salvador</item>
        <item>America/Guatemala</item>
        <item>America/Managua</item>
        <item>America/Matamoros</item>
        <item>America/Merida</item>
        <item>America/Mexico_City</item>
        <item>America/Monterrey</item>
        <item>America/Regina</item>
        <item>America/Tegucigalpa</item>
        <item>America/Winnipeg</item>
        <item>America/Bogota</item>
        <item>America/Cancun</item>
        <item>America/Cayman</item>
        <item>America/Detroit</item>
        <item>America/Fort_Wayne</item>
        <item>America/Grand_Turk</item>
        <item>America/Guayaquil</item>
        <item>America/Havana</item>
        <item>America/Jamaica</item>
        <item>America/Lima</item>
        <item>America/Louisville</item>
        <item>America/Montreal</item>
        <item>America/Nassau</item>
        <item>America/New_York</item>
        <item>America/Panama</item>
        <item>America/Port-au-Prince</item>
        <item>America/Porto_Velho</item>
        <item>America/Puerto_Rico</item>
        <item>America/Rio_Branco</item>
        <item>America/Thunder_Bay</item>
        <item>America/Toronto</item>
        <item>America/Caracas</item>
        <item>America/Halifax</item>
        <item>America/Martinique</item>
        <item>America/Port_of_Spain</item>
        <item>America/Puerto_Rico</item>
        <item>America/Santo_Domingo</item>
        <item>Atlantic/Bermuda</item>
        <item>America/Argentina/Buenos_Aires</item>
        <item>America/Bahia</item>
        <item>America/Belem</item>
        <item>America/Cayenne</item>
        <item>America/Fortaleza</item>
        <item>America/Godthab</item>
        <item>America/Mendoza</item>
        <item>America/Miquelon</item>
        <item>America/Montevideo</item>
        <item>America/Paramaribo</item>
        <item>America/Recife</item>
        <item>America/Rosario</item>
        <item>America/Santiago</item>
        <item>America/Santo_Domingo</item>
        <item>America/Sao_Paulo</item>
        <item>America/St_Johns</item>
        <item>Atlantic/South_Georgia</item>
        <item>Atlantic/Azores</item>
        <item>Atlantic/Cape_Verde</item>
        <item>Africa/Casablanca</item>
        <item>Africa/Monrovia</item>
        <item>Africa/Sao_Tome</item>
        <item>Africa/Timbuktu</item>
        <item>Atlantic/Canary</item>
        <item>Atlantic/Madeira</item>
        <item>Atlantic/Reykjavik</item>
        <item>Atlantic/St_Helena</item>
        <item>Europe/Amsterdam</item>
        <item>Europe/Andorra</item>
        <item>Europe/Athens</item>
        <item>Europe/Belgrade</item>
        <item>Europe/Berlin</item>
        <item>Europe/Brussels</item>
        <item>Europe/Bucharest</item>
        <item>Europe/Budapest</item>
        <item>Europe/Copenhagen</item>
        <item>Europe/Dublin</item>
        <item>Europe/Gibraltar</item>
        <item>Europe/Helsinki</item>
        <item>Europe/Isle_of_Man</item>
        <item>Europe/Istanbul</item>
        <item>Europe/Jersey</item>
        <item>Europe/Kiev</item>
        <item>Europe/Lisbon</item>
        <item>Europe/London</item>
        <item>Europe/Luxembourg</item>
        <item>Europe/Madrid</item>
        <item>Europe/Malta</item>
        <item>Europe/Minsk</item>
        <item>Europe/Monaco</item>
        <item>Europe/Moscow</item>
        <item>Europe/Oslo</item>
        <item>Europe/Paris</item>
        <item>Europe/Prague</item>
        <item>Europe/Riga</item>
        <item>Europe/Rome</item>
        <item>Europe/San_Marino</item>
        <item>Europe/Sarajevo</item>
        <item>Europe/Sofia</item>
        <item>Europe/Stockholm</item>
        <item>Europe/Vatican</item>
        <item>Europe/Vienna</item>
        <item>Europe/Warsaw</item>
        <item>Europe/Zagreb</item>
        <item>Europe/Zurich</item>
        <item>Indian/Antananarivo</item>
        <item>Indian/Christmas</item>
        <item>Indian/Cocos</item>
        <item>Indian/Comoro</item>
        <item>Indian/Maldives</item>
        <item>Indian/Mauritius</item>
        <item>Indian/Reunion</item>
        <item>Iran</item>
        <item>Israel</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Kwajalein</item>
        <item>Libya</item>
        <item>Pacific/Auckland</item>
        <item>Pacific/Easter</item>
        <item>Pacific/Fiji</item>
        <item>Pacific/Galapagos</item>
        <item>Pacific/Guadalcanal</item>
        <item>Pacific/Guam</item>
        <item>Pacific/Honolulu</item>
        <item>Pacific/Marquesas</item>
        <item>Pacific/Pitcairn</item>
        <item>Pacific/Samoa</item>
        <item>Pacific/Tahiti</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Singapore</item>
        <item>Turkey</item>
        <item>UTC</item>
        <item>Zulu</item>
    </string-array>
    <string name="radio_title">Radio</string>
    <string name="radio_button">Get Stations</string>
    <string name="radio_country">Search</string>
    <string name="radio_station">Station</string>
    <string name="radio_hint">Selection</string>
    <string name="radio_select">Select</string>
    <string name="pay_message">Thank you for your support</string>
    <string name="pay_title">PayPal</string>
    <string name="pay_button">Open PayPal</string>
    <string name="pay_amount">Amount</string>
    <string name="pay_hint">$</string>
    <string name="tab_label1">PayPal</string>
    <string name="tab_label2">Tic Tac Toe</string>
    <string name="tab_label3">Flagsmart!</string>
    <string name="author_label">Frank Berrocal ©2023</string>
    <string name="helpMessage">Want to know how to use Tempo?\n\nThis is the right place!\n\nTempo was created to organize your access to local information while traveling.\n\nAll the tools require access to the internet.\n\n</string>
    <string name="congratulations">Congratulations, You\'ve Won!!!!</string>
    <string name="ending">Keep testing your knowledge and discover even more flags from around the world! Have fun learning!</string>
</resources>