<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="730dp"
    android:paddingTop="30dp"
    android:paddingBottom="0dp"
    android:paddingHorizontal="70dp"
    android:orientation="vertical"
    tools:context=".fragment_payment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:columnCount="1"
        android:rowCount="4"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_row="0"
            android:padding="5dp"
            android:layout_margin="3dp"
            android:src="@drawable/tempo_logo"
            />

        <TextView
            android:id="@+id/titlePayment"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/pay_title"
            android:textAlignment="viewEnd"
            android:textSize="@dimen/activity_titles"
            android:textColor="#2196F3"
            android:typeface="monospace"
            android:textStyle="normal"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            />



        <GridLayout
            android:layout_width="250dp"
            android:layout_height="360dp"
            android:layout_column="0"
            android:layout_row="2"
            android:rowCount="5"
            android:columnCount="2">



            />
            <TextView
                android:id="@+id/text_message"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_columnSpan="2"
                android:padding="0dp"
                android:layout_margin="0dp"
                android:text="@string/pay_message"
                android:textColor="#2196F3"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textStyle="italic"
                />
            <TextView
                android:id="@+id/text_amount"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_column="0"
                android:layout_row="1"
                android:padding="0dp"
                android:layout_margin="0dp"
                android:text="@string/pay_amount"
                android:textColor="#2196F3"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                />
            <EditText
                android:id="@+id/input_amount"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_column="1"
                android:layout_row="1"
                android:textAlignment="center"
                android:textSize="15dp"
                android:textColor="#2196F3"
                android:typeface="sans"
                android:textStyle="normal"
                android:paddingTop="20dp"
                android:paddingRight="10dp"
                android:backgroundTint="#2196F3"
                android:hint="@string/pay_hint"
                />


            <Button
                android:id="@+id/button_open"
                android:layout_width="230dp"
                android:layout_column="0"
                android:layout_row="2"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_columnSpan="2"
                android:textColorHint="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/pay_button"
                android:textStyle="bold"
                android:textSize="@dimen/activity_radio_button"
                android:onClick="showTime"
                android:layout_gravity="center"
                android:background="#FF9800"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:paddingTop="0dp"

                />
            <ImageView
                android:id="@+id/image_pay"
                android:layout_columnSpan="2"
                android:layout_rowSpan="2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="0"
                android:layout_row="3"
                android:padding="5dp"
                android:src="@drawable/ic_paypal"
                android:onClick="showRadio"
                android:layout_gravity="center_horizontal"

                />


        </GridLayout>

        <GridLayout
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_column="0"
            android:layout_row="3"
            >
            <TextView
                android:id="@+id/signatureFirst"
                android:layout_height="50dp"
                android:layout_width="180dp"
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/author"
                android:textDirection="firstStrong"
                android:textSize="10dp"
                android:textColor="#2196F3"
                android:typeface="monospace"
                android:textStyle="normal"
                android:textAlignment="viewEnd"
                android:paddingTop="15dp"
                />
            <ImageView
                android:id="@+id/image_copyright"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_column="1"
                android:layout_row="1"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:src="@drawable/ic_copyright"
                android:paddingTop="15dp"
                />
            <TextView
                android:id="@+id/year"
                android:layout_height="50dp"
                android:layout_width="30dp"
                android:layout_column="2"
                android:layout_row="1"
                android:text="@string/year"
                android:textDirection="firstStrong"
                android:textSize="10dp"
                android:textColor="#2196F3"
                android:typeface="monospace"
                android:textStyle="normal"
                android:textAlignment="viewStart"
                android:paddingTop="15dp"
                />
        </GridLayout>
    </GridLayout>

</RelativeLayout>