<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="730dp"
    android:paddingTop="40dp"
    android:paddingBottom="0dp"
    android:paddingHorizontal="80dp"
    android:orientation="vertical"
    tools:context=".activity_main">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:columnCount="1"
        android:rowCount="4"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_column="0"
            android:layout_row="0"
            android:padding="5dp"
            android:layout_margin="3dp"
            android:src="@drawable/tempo_logo"
            />

        <TextView
            android:id="@+id/titleFirst"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/title_name"
            android:textAlignment="viewEnd"
            android:textSize="@dimen/activity_titles"
            android:textColor="#2196F3"
            android:typeface="monospace"
            android:textStyle="normal"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            />



        <GridLayout
            android:layout_width="250dp"
            android:layout_height="340dp"
            android:layout_column="0"
            android:layout_row="2"
            android:rowCount="6"
            android:columnCount="2">


            <ImageView
                android:id="@+id/image_radio"
                android:layout_width="60dp"
                android:layout_height="@dimen/main_tag_height"
                android:layout_column="0"
                android:layout_row="0"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:src="@drawable/ic_radio"
                android:onClick="showRadio"
                />
            <TextView
                android:id="@+id/message_radio"
                android:layout_width="145dp"
                android:layout_height="@dimen/main_tag_height"
                android:layout_column="1"
                android:layout_row="0"
                android:text="@string/desc_radio"
                android:textAlignment="viewStart"
                android:textSize="15dp"
                android:textColor="#2196F3"
                android:typeface="sans"
                android:textStyle="normal"
                android:paddingTop="20dp"
                android:paddingLeft="50dp"
                />
            <ImageView
                android:id="@+id/image_weather"
                android:layout_width="60dp"
                android:layout_height="@dimen/main_tag_height"
                android:layout_column="0"
                android:layout_row="1"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:src="@drawable/ic_weather"
                android:onClick="showWeather"

                />
            <TextView
                android:id="@+id/message_weather"
                android:layout_width="145dp"
                android:layout_height="@dimen/main_tag_height"
                android:layout_column="1"
                android:layout_row="1"
                android:text="@string/desc_weather"
                android:textAlignment="viewStart"
                android:textSize="15dp"
                android:textColor="#2196F3"
                android:typeface="sans"
                android:textStyle="normal"
                android:paddingTop="20dp"
                android:paddingLeft="50dp"
                />
            <ImageView
                android:id="@+id/image_news"
                android:layout_width="60dp"
                android:layout_height="@dimen/main_tag_height"
                android:layout_column="0"
                android:layout_row="2"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:src="@drawable/ic_news"
                android:onClick="showNews"
                />
            <TextView
                android:id="@+id/message_news"
                android:layout_width="145dp"
                android:layout_height="@dimen/main_tag_height"
                android:layout_column="1"
                android:layout_row="2"
                android:text="@string/desc_news"
                android:textAlignment="viewStart"
                android:textSize="15dp"
                android:textColor="#2196F3"
                android:typeface="sans"
                android:textStyle="normal"
                android:paddingTop="20dp"
                android:paddingLeft="50dp"
                />

            <ImageView
                android:id="@+id/image_time"
                android:layout_width="60dp"
                android:layout_height="@dimen/main_tag_height"
                android:layout_column="0"
                android:layout_row="3"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:src="@drawable/ic_time"
                android:onClick="showTime"
                />

            <TextView
                android:id="@+id/message_time"
                android:layout_width="145dp"
                android:layout_height="@dimen/main_tag_height"
                android:layout_row="3"
                android:layout_column="1"
                android:text="@string/desc_time"
                android:textAlignment="viewStart"
                android:textSize="15dp"
                android:textColor="#2196F3"
                android:typeface="sans"
                android:textStyle="normal"
                android:paddingTop="20dp"
                android:paddingLeft="50dp" />

            <ImageView
                android:id="@+id/image_flag"
                android:layout_width="60dp"
                android:layout_height="@dimen/main_tag_height"
                android:layout_column="0"
                android:layout_row="4"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:src="@drawable/ic_flag"
                android:onClick="showGame"
                />
            <TextView
                android:id="@+id/message_flag"
                android:layout_width="145dp"
                android:layout_height="@dimen/main_tag_height"
                android:layout_row="4"
                android:layout_column="1"
                android:text="@string/flag_title"
                android:textAlignment="viewStart"
                android:textSize="15dp"
                android:textColor="#2196F3"
                android:typeface="sans"
                android:textStyle="normal"
                android:paddingTop="20dp"
                android:paddingLeft="50dp"
                />
            <ImageView
                android:id="@+id/image_support"
                android:layout_width="60dp"
                android:layout_height="@dimen/main_tag_height"
                android:layout_column="0"
                android:layout_row="5"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:src="@drawable/ic_support"
                android:onClick="showSupport"
                />
            <TextView
                android:id="@+id/message_support"
                android:layout_width="145dp"
                android:layout_height="@dimen/main_tag_height"
                android:layout_row="5"
                android:layout_column="1"
                android:text="@string/desc_support"
                android:textAlignment="viewStart"
                android:textSize="15dp"
                android:textColor="#2196F3"
                android:typeface="sans"
                android:textStyle="normal"
                android:paddingTop="20dp"
                android:paddingLeft="50dp"
                />

        </GridLayout>

        <GridLayout
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_column="0"
            android:layout_row="3"
            >
            <TextView
                android:id="@+id/signatureFirst"
                android:layout_height="50dp"
                android:layout_width="180dp"
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/author"
                android:textDirection="firstStrong"
                android:textSize="10dp"
                android:textColor="#2196F3"
                android:typeface="monospace"
                android:textStyle="normal"
                android:textAlignment="viewEnd"
                android:paddingTop="15dp"
                />
            <ImageView
                android:id="@+id/image_copyright"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_column="1"
                android:layout_row="1"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:src="@drawable/ic_copyright"
                android:paddingTop="15dp"
                />
            <TextView
                android:id="@+id/year"
                android:layout_height="50dp"
                android:layout_width="30dp"
                android:layout_column="2"
                android:layout_row="1"
                android:text="@string/year"
                android:textDirection="firstStrong"
                android:textSize="10dp"
                android:textColor="#2196F3"
                android:typeface="monospace"
                android:textStyle="normal"
                android:textAlignment="viewStart"
                android:paddingTop="15dp"
                />
        </GridLayout>
    </GridLayout>




</LinearLayout>