<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="70dp"
    tools:context=".activity_won">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="1"
        android:rowCount="5">

        <ImageView
            android:id="@+id/logoThird"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_column="0"
            android:layout_row="0"
            android:padding="5dp"
            android:layout_margin="3dp"
            android:src="@drawable/mainlogo"
            />

        <TextView
            android:id="@+id/titleThird"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/congratulations"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:typeface="monospace"
            android:textStyle="italic"
            />


        <ImageView
            android:id="@+id/mainTrophy"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_column="0"
            android:layout_row="2"
            android:padding="5dp"
            android:src="@drawable/trophy"/>

        <TextView
            android:id="@+id/closingMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/ending"
            android:textAlignment="center"
            android:textSize="@dimen/score_label_size"
            android:textColor="@color/black"
            android:typeface="normal"
            android:textStyle="normal"
            />



        <TextView
            android:id="@+id/signatureFirst"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/author_label"
            android:textDirection="firstStrong"
            android:textSize="10dp"
            android:textColor="@color/black"
            android:typeface="monospace"
            android:textStyle="normal"
            android:textAlignment="viewEnd"
            android:padding="15dp"

            />

    </GridLayout>

</LinearLayout>