<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="50dp"
    android:paddingHorizontal="60dp"
    tools:context=".activity_help">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:columnCount="1"
        android:rowCount="3">



        <ImageView
            android:id="@+id/logoFlag"
            android:layout_height="100dp"
            android:layout_column="0"
            android:layout_row="0"
            android:padding="5dp"
            android:src="@drawable/tempo_logo"/>

        <RelativeLayout
            android:id="@+id/flagHolder"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_column="0"
            android:layout_row="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mainFlag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/helpMessage"
                android:textAlignment="center"
                />

        </RelativeLayout>



        <GridLayout
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_column="0"
            android:layout_row="2"
            >
            <TextView
                android:id="@+id/signatureFirst"
                android:layout_height="50dp"
                android:layout_width="180dp"
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/author"
                android:textDirection="firstStrong"
                android:textSize="10dp"
                android:textColor="#2196F3"
                android:typeface="monospace"
                android:textStyle="normal"
                android:textAlignment="viewEnd"
                android:paddingTop="15dp"
                />
            <ImageView
                android:id="@+id/image_copyright"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_column="1"
                android:layout_row="1"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:src="@drawable/ic_copyright"
                android:paddingTop="15dp"
                />
            <TextView
                android:id="@+id/year"
                android:layout_height="50dp"
                android:layout_width="30dp"
                android:layout_column="2"
                android:layout_row="1"
                android:text="@string/year"
                android:textDirection="firstStrong"
                android:textSize="10dp"
                android:textColor="#2196F3"
                android:typeface="monospace"
                android:textStyle="normal"
                android:textAlignment="viewStart"
                android:paddingTop="15dp"
                />
        </GridLayout>

    </GridLayout>

</LinearLayout>